--- a/openApiDocs/v1.0/DeviceManagement.Actions.yml
+++ b/openApiDocs/v1.0/DeviceManagement.Actions.yml
@@ -2822,6 +2822,7 @@ components:
           type: string
         message:
           type: string
+          x-ms-primary-error-message: true
         target:
           type: string
           nullable: true
