--- a/openApiDocs/v1.0/People.yml
+++ b/openApiDocs/v1.0/People.yml
@@ -1959,6 +1959,7 @@ components:
           type: string
         message:
           type: string
+          x-ms-primary-error-message: true
         target:
           type: string
           nullable: true
